core/unpackaged/main/default/objects/OrderItem/OrderItem.object-meta.xml
<CustomObject>
</CustomObject>