core/unpackaged/main/default/objects/OrderItem/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>customer notes</description>
    <inlineHelpText>customer notes</inlineHelpText>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>