core/unpackaged/main/default/objects/OrderItem/fields/PPI_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>PPI_Part_Number__c</fullName>
    <description>Overrides product SKU in the store</description>
    <inlineHelpText>Overrides product SKU in the store</inlineHelpText>
    <label>PPI Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>